[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fas-guardian"
version = "1.0.1"
description = "FAS Guardian — Protect your AI from prompt injection in 3 lines of code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Fallen Angel Systems", email = "support@fallenangelsystems.com"},
]
keywords = ["ai", "security", "prompt-injection", "llm", "guardian", "firewall"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://fallenangelsystems.com"
Documentation = "https://fallenangelsystems.com/docs"
Repository = "https://github.com/fallenangelsystems/fas-guardian-python"

[tool.setuptools.packages.find]
include = ["fas_guardian*"]
